# secret-share-documents

./: .gitignore  .gitpod.yml  LICENSE  README.md
.github/workflows/: contract.yml  rust.yml  sdk-js.yml
contract/: Cargo.toml  Makefile  NOTICE  README.md
contract/examples/: schema.rs
contract/schema/: execute_msg.json  execute_permit_msg.json  query_msg.json
contract/scripts/: .env.example  README.md  deploy.js  package-lock.json  package.json
contract/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contract/src/pretty/: mod.rs  struct_.rs
contract/tests/: deploy.ts  get-public-key.ts  integration.ts  package-lock.json  package.json  test.ts  tsconfig.json
front/: .env  .env.example  package-lock.json  package.json
front/src/app/: layout.tsx  page.tsx
front/src/components/: Content.tsx  DropContent.tsx  FileDropper.tsx  FileList.tsx  Footer.tsx  Hero.tsx  Menu.tsx  SubmitButton.tsx  account-metamask.tsx  account-secret-network.tsx  account.tsx  connect-wallet.tsx  copy-to-clipboard-button.tsx  copy-to-clipboard-copiable.tsx  disconnect-wallet.tsx  fetch-all-file-ids.tsx  fetch-file-access.tsx  file-icon.tsx  file-id-share-form.tsx  file-id-share-modal.tsx  file-ids-list.tsx  header.tsx  upload-form.tsx
front/src/config/: chains.ts  config.ts  index.tsx  types.ts
front/src/context/: SecretDocumentContext.tsx  SecretDocumentProvider.tsx  index.tsx
getting-started/: README.md
polygon-secret/: .env.example  Makefile  README.md  hardhat.config.ts  package-lock.json  package.json
polygon-secret/.deployment/: backup.json  deploymentManager.ts  hardhat.json  mumbai.json  polygon.json
polygon-secret/contracts/: PolygonToSecret.sol
polygon-secret/test/: test.js
polygon-secret/utils/: files.ts  uploadToIpfs.ts  verifyAddress.ts
sdk-js/: .env.example  .gitignore  .npmignore  README.md  encryptedData.json  index.ts  jest.config.ts  package-lock.json  package.json  tsconfig.json
sdk-js/SmartContract/: ShareDocumentSmartContract.ts
sdk-js/StoreDocument/: index.ts
sdk-js/config/: IConfig.ts  chains.ts  index.ts  wagmi.ts
sdk-js/contract/: README.md  contract.wasm
sdk-js/src/: Config.ts  Environment.ts  IConfig.ts  Network.ts  SecretDocumentClient.ts  index.ts
sdk-js/tests/: arweave._test.ts  arweave.test.ts  config.test.ts  ecdh-encryption.test.ts  ecdh.test.ts  init-local-secret-document.ts  ipfs.test.ts  polygon-to-secret-smart-contract.test.ts  polygon-to-secret.test.ts  secret-document-client.test.ts  secret-document-smart-contract.test.ts  secret-network.test.ts  setup.ts  share-document-client.test.ts  share-document-smart-contract.test.ts  share-document.test.ts  store-document.test.ts  symetric-key-encryption.test.ts  symetric-key.test.ts  utils.ts  view-document.test.ts
(+47 files in other folders)
