[package]
name = "secret-share-documents"
version = "0.1.0"
authors = ["FiftyWei"]
edition = "2021"
description = "Share document with Secret Network"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.10" }
secret-toolkit-storage = "0.9.0"

secret-toolkit = { package = "secret-toolkit", version = "0.10.0" }


schemars = { version = "0.8.11" }
serde = { version = "1.0" }
thiserror = { version = "1.0" }

sha2 = "0.10.8"
bincode = "1.3.3"
hex = "0.4.3"


# Uncomment these for some common extra tools
# secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.8.0" }
# cw-storage-plus = { version = "1.0.1", default-features = false }

# [dev-dependencies]
cosmwasm-schema = "1.0.0"
