[package]
name = "secret-share-documents"
version = "0.1.0"
authors = ["FiftyWei"]
edition = "2021"
description = "Share document with Secret Network"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", branch = "master", default-features = false, features = ["utils", "storage", "serialization"]}

cosmwasm-schema = "1.0.0"
schemars = { version = "0.8.11" }

serde = { version = "1.0" }
thiserror = { version = "1.0" }

sha2 = "0.10.8"
bincode = "1.3.3"
hex = "0.4.3"

secp256k1 = { git = "https://github.com/scrtlabs/rust-secp256k1" }
aes-siv = "0.6.2" # Issue with version "0.7.0" when building wasm contract



[dev-dependencies]
rstest = "0.18.2"
